fix the broken layout for Japanese.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/branches/i18n-p3@3367 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/css/st/screen.css
+++ b/nlw/share/css/st/screen.css
@@ -691,6 +691,7 @@ body {
     overflow: hidden;
     float: left;
     height: 25px;
+    padding-bottom: 3px;
 }
 
 #wikiwyg_wikitext_textarea {
